--- a/docker-compose-drupal-postgres.yml
+++ b/docker-compose-drupal-postgres.yml
@@ -3,9 +3,6 @@ version: '3.1'
 # Note: use the database service name `db` in the Host IP Address field ...
 # Or, `docker container inspect {postgrescontainerid}` to obtain the IP Address needed for completing the Drupal setup screen.
 
-# $ docker stack deploy -c docker-compose-drupal-postgres.yml drupaltest
-# http://localhost:8080
-
 services:
   # Postgres
   db:
@@ -27,9 +24,9 @@ services:
     ports:
       - 8080:80
     volumes:
-      - cms_modules:/var/www/html/modules
-      - cms_profiles:/var/www/html/profiles
-      - cms_themes:/var/www/html/themes
+      - ./drupal/modules:/var/www/html/modules
+      - ./drupal/profiles:/var/www/html/profiles
+      - ./drupal/themes:/var/www/html/themes
       - cms_sites:/var/www/html/sites
     depends_on:
       - db
@@ -37,7 +34,5 @@ services:
 # Volumes
 volumes:
   db_data:
-  cms_modules:
-  cms_profiles:
-  cms_themes:
   cms_sites:
+      
